--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": "^7.1.3",
-    "eskirex/dotify": "^1.0"
+    "eskirex/dotify": "dev-master"
   },
   "config": {
     "minimum-stability": "dev"
